# cppPrototype

./: README.md
expenses_tracker/: CMakeLists.txt  main.cpp
expenses_tracker/prototype_lib/: CMakeLists.txt  expenses_tracker.cpp  expenses_tracker.h
prototype/src/: arrays.cpp  contructorsAndDestructors.cpp  encapsulation.cpp  enum.cpp  fibonacci.cpp  filesExercise.c  filesExercise.txt  friendClass.cpp  functionOverloading.cpp  functionOverriding.cpp  inheritance.cpp  operatorOverloading.cpp  pointerToStructures.cpp  structures.cpp  virtualFunctions.cpp
scripts/: script.sh
test_run/: CMakeLists.txt  main.cpp
test_run/Google_tests/: CMakeLists.txt  banking_application_test.cpp  math_operations_test.cpp
test_run/Google_tests/lib/googletest/cmake/: gtest_main.pc.in:Zone.Identifier
test_run/test_run_lib/: CMakeLists.txt  banking_application.cpp  banking_application.h  math_operation.cpp  math_operations.h
unit_test/: CMakeLists.txt  main.cpp
unit_test/Google_tests/: CMakeLists.txt  banking_application_mock.h  banking_application_test.cpp
unit_test/prototype_lib/: CMakeLists.txt  banking_application.cpp  banking_application.h  employee_management.cpp  employee_management.h  expenses_tracker.cpp  smart_home.cpp  smart_home.h
